src/examples/should_fail/clash_nonterminal_enum_variant_symbol_sequence.kiki
start TwoFractions

enum TwoFractions {
    Spam(Fraction Fraction)
    Ham {
        left: Fraction
        right: Fraction
    }
}

struct Fraction {
    numerator: $Num
    _: $Slash
    denominator: $Num
}

terminal Token {
    $Num: isize
    $Slash: ()
}